# quid

./: .gitignore  .gitmodules  README.md  claudehistoryfile.txt  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
docs/: WP.md  legal.md
evm/: Base.t.sol  Poly.t.sol  foundry.toml
evm/scripts/: DeployArb.s.sol  DeployBase.s.sol  DeployL1.s.sol  DeployPoly.s.sol  LZconfig.s.sol  Peer.s.sol
evm/src/: Amp.sol  Aux.sol  Basket.sol  Court.sol  Jury.sol  Link.sol  Rover.sol  Solver.sol  Vogue.sol  VogueCore.sol  mock.sol
evm/test/: Alles.t.sol  Arb.t.sol
keeper/: .env.example  README.md  keeper.ts  keeper_prediction.ts  keeper_solana.ts  project.yaml  secrets.yaml
keeper/my-workflow/: config.staging.json  go.mod  go.sum  main.go  workflow.yaml
keeper/oracle-cre/: cre_stubs.go  deterministic_resolve.go  evidence_verify.go  execution_plan.go  go.mod  http.go  http_test_stub.go  main.go  main_test_stub.go  market_types.go  model_dispatch.go  model_types.go  oracle_cre_test.go  pipeline.go  privacy_bridge.go  shared_types.go  step_executors.go  storage.go  tee_privacy.go  validate.go
src/app/: EvidenceTab.tsx  PredictionMarketTab.tsx  StockExposureTab.tsx  globals.css  layout.tsx  page.tsx
src/lib/: abi.ts  chains.ts  mongo.ts  quid.json  tickers.ts
svm/: Anchor.toml  e2e_oracle.sh  extract-tickers.ts  package-lock.json  package.json  start-validator.sh  tsconfig.json
svm/programs/quid/: Cargo.toml
svm/programs/quid/src/: LZ.rs  acta.rs  clutch.rs  entra.rs  etc.rs  lib.rs  out.rs  pago.rs  peso.rs  state.rs  stay.rs
(+53 files in other folders)
