
[package]
name = "quid"
version = "0.1.0"
description = ""
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "quid"

[features]
default = []
testing = []

cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
phf = { version = "0.13.1", features = ["macros"] }
anchor-lang = { version = "0.32.1", features=["init-if-needed"] }
anchor-spl = "0.32.1"
solana-program = "3.0"
switchboard-on-demand = "0.11.3"
